Fixed 'exit' command